<resources>
    <string name="app_name">Foco no Ades</string>
    <string name="nm_usuario">Nome</string>
    <string name="nm_email">Email</string>
    <string name="nr_telefone">Numero do telefone</string>
    <string name="ocorrencia">Ocorrencia</string>
    <string name="tirar_foto">Tirar Foto</string>
    <string name="ds_ambiente"><font size="16">Descreva o Ambiente</font></string>
    <string name="nr_lat">Latitude :</string>
    <string name="nr_long">Longitude :</string>
    <string name="google_app_id">780507873755</string>
    <string name="nm_bairro"><font size="16">Bairro</font></string>
    <string name="nm_logr"><font size="16">Logradouro</font></string>
    <string name="ds_quadra"><font size="16">Quadra</font></string>
    <string name="ds_lote"><font size="16">Lote</font></string>
    <string name="nr_end"><font size="16">Número</font></string>
    <string-array name="tp_local">

        <item><font size="16">INFORME UM TIPO DE LOCAL</font></item>
        <item><font size="16">RESIDÊNCIA</font></item>
        <item><font size="16">COMÉRCIO</font></item>
        <item><font size="16">ÓRGÃO PÚBLICO</font></item>
        <item><font size="16">MONUMENTOS</font></item>
        <item><font size="16">OUTROS</font></item>

    </string-array>
    <string name="ds_horario"><font size="16">Horario para visita</font></string>

    <string name='st_local_1'><font size="16">PRESENÇA DE VÁRIOS MOSQUITOS NO LOCAL</font></string>
    <string name='st_local_2'><font size="16">ALGUÉM NO LOCAL ESTÁ COM DENGUE/ZIKA/CHIKUNGUNYA OU COM SUSPEITA</font></string>
    <string name='st_local_3'><font size="16">PISCINA SEM TRATAMENTO</font></string>
    <string name='st_local_4'><font size="16">FOSSA SEM TAMPA</font></string>
    <string name='st_local_5'><font size="16">CAIXA DE ÁGUA SEM TAMPA</font></string>
    <string name='st_local_6'><font size="16">IMÓVEL DESABITADO</font></string>
    <string name='st_local_7'><font size="16">PNEUS EXPOSTOS AO TEMPO</font></string>
    <string name='st_local_8'><font size="16">LOTE VAGO</font></string>
    <string name='st_local_9'><font size="16">OUTRAS SITUAÇÕES</font></string>

    <string name='lote_vago'><font size="16">OUTRAS SITUAÇÕES</font></string>

    <string-array name="sel_lote_vago">

        <item><font size="16">INFORME SOBRE O LOTE VAGO</font></item>
        <item><font size="16">ESTÁ COM LIXO</font></item>
        <item><font size="16">ESTÁ COM ENTULHO</font></item>
        <item><font size="16">ESTÁ COM MATAGAL</font></item>

    </string-array>
    <string name="label_tp_local"><font size="16">TIPO DO LOCAL/IMÓVEL</font></string>
    <string name="label_ds_horario"><font size="16">MELHOR HORÁRIO PARA A VISITA</font></string>
    <string name="label_st_local"><font size="16">SITUAÇÃO DO LOCAL DENUNCIADO</font></string>

    <string name='tp_logr'><font size="16">Tipo do logradouro</font></string>

    <string-array name="sel_tp_logr">

        <item><font size="16">INFORME O TIPO DE LOGRADOURO</font></item>
        <item><font size="16">TR</font></item>
        <item><font size="16">AVE</font></item>
        <item><font size="16">ALA</font></item>
        <item><font size="16">ACE</font></item>
        <item><font size="16">BR-</font></item>
        <item><font size="16">DES</font></item>
        <item><font size="16">EST</font></item>
        <item><font size="16">GIM</font></item>
        <item><font size="16">GO-</font></item>
        <item><font size="16">MRG</font></item>
        <item><font size="16">PCA</font></item>
        <item><font size="16">RUA</font></item>
        <item><font size="16">ROD</font></item>
        <item><font size="16">TRC</font></item>
        <item><font size="16">TRE</font></item>
        <item><font size="16">TRV</font></item>
        <item><font size="16">VDA</font></item>
        <item><font size="16">VDP</font></item>
        <item><font size="16">VDS</font></item>
        <item><font size="16">VIA</font></item>
        <item><font size="16">VLA</font></item>

    </string-array>

</resources>
